# protocol-acl

./: Anchor.toml  Makefile  README.md
programs/sol-gateway/: Cargo.toml
programs/sol-gateway/macros/: Cargo.toml
programs/sol-gateway/macros/src/: lib.rs  macros.rs
programs/sol-gateway/macros/src/macros/: rule.rs  sol_gateway_accounts.rs
programs/sol-gateway/src/: errors.rs  instructions.rs  lib.rs  state.rs  utils.rs
programs/sol-gateway/src/instructions/: add_rule.rs  allowed.rs  assign_permission.rs  assign_role.rs  delete_assigned_permission.rs  delete_assigned_role.rs  delete_file.rs  delete_rule.rs  initialize_file.rs  initialize_files.rs  update_cache.rs  update_file.rs  update_metadata.rs
programs/sol-gateway/src/state/: file.rs  metadata.rs  permission.rs  role.rs  rule.rs
programs/sol-gateway/src/utils/: file.rs  roles.rs  rules.rs
tests/: 1_initialize_app.ts  1_initialize_file.ts  2_rules.ts  3_assign_roles.ts  4_check_permissions.ts  5_allow_assign_roles.ts  6_allow_add_rules.ts  common.ts  constants.ts
