[package]
name = "sol-gateway"
version = "0.1.12"
description = "A fine grained Role-Based Access Control (RBAC) for enhanced security on Solana programs"
edition = "2021"
authors = ["Shailesh"]
keywords = ["solana", "acl"]
categories = ["authentication"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_gateway"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
ahash = "=0.8.6"
sol-gateway-macros = { path = "./macros", version = "0.1.9" }
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
#anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
solana-program = "=1.17.0"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"